--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>facebook Releases Nexus Repository</name>
+	      <name>amazon Releases Nexus Repository</name>
 	      <url>http://13.233.8.185:8081/repository/facebook-release/</url>
 	    </repository>
 	    <snapshotRepository>
@@ -117,3 +117,4 @@
 
 	
 </project>
+
