--- a/pom.xml
+++ b/pom.xml
@@ -90,13 +90,13 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>amazon Releases Nexus Repository</name>
-	      <url>http://13.233.8.185:8081/repository/facebook-release/</url>
+	      <name>facebook Releases Nexus Repository</name>
+	      <url>http://3.110.182.251:8081/repository/facebook-release/repository/facebook-release/</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://13.233.8.185:8081/repository/facebook-snapshot/</url>
+	      <name>facebook Snapshot Nexus Repository </name>
+	      <url>http://3.110.182.251:8081/repository/facebook-snapshot/repository/facebook-snapshot/</url>
 	    </snapshotRepository>    
 	</distributionManagement>
 	
