--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<description>Maven Web Project</description>
 
 	<organization>
-		<name>kishoreTechnologies</name>
+		<name>mithunTechnologies</name>
 		<url>http://mithuntechnologies.com/</url>
 	</organization>
 
